--- a/admin/admin_home.css
+++ b/admin/admin_home.css
@@ -79,6 +79,11 @@ ul {
   color: var(--main-color);
   margin-bottom: 14px;
   font-weight: 500;
+  cursor: pointer;
+  
+}
+.item:hover{
+  color: #265df2;
 }
 .item img {
   width: 14px;
@@ -520,4 +525,81 @@ input[type="submit"] {
   .category {
     padding: 20px;
   }
+}
+@media screen and (max-width: 700px) {
+  .left-bar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .left-bar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .left-bar a {
+    text-align: center;
+    float: none;
+  }
+}
+
+#feed {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow: auto;
+  border-radius: 8px;
+}
+
+.card {
+  flex: 0 0 auto;
+  height: fit-content;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: var(--surface-color);
+  -webkit-user-select: text;
+  user-select: text;
+}
+
+.card>h3 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.card>p {
+  max-height: 150px;
+  word-break: break-all;
+  white-space: normal;
+  overflow: auto;
+}
+
+.card>.button-cluster {
+  margin-top: 5px;
+}
+
+/* dialog {
+  width: min(80%, 500px);
+  padding: 20px;
+  border: none;
+  border-radius: 8px;
+  color: var(--text-color);
+  background-color: var(--surface-color);
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+dialog::backdrop {
+  background-color: black;
+  opacity: 0.25;
+} */
+
+.card button,
+dialog button {
+  background-color: var(--control-color);
+}
+
+.card button:hover,
+dialog button:hover {
+  background-color: var(--accent-color);
 }
