--- a/user/user_home.css
+++ b/user/user_home.css
@@ -552,3 +552,30 @@ input[type="submit"] {
     padding: 20px;
   }
 }
+#feed {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow: auto;
+  border-radius: 8px;
+}
+
+.card {
+  margin-top: 10px;
+  flex: 0 0 auto;
+  height: fit-content;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: var(--box-color);
+  -webkit-user-select: text;
+  user-select: text;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(22, 21, 21, 0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
