changes made on both sides

--- a/admin/admin_home.css
+++ b/admin/admin_home.css
@@ -659,6 +659,11 @@ font-size: medium;
 
 .delete-item {
   float: right;
+  margin-right: 5px;
+  
+}
+.update-item {
+  float: right;
   margin-right: 10px;
   
 }
