--- a/user/user_login.css
+++ b/user/user_login.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family:  sans-serif;
 }
 body{
     height: 100vh;
@@ -13,6 +13,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: #d4d4d4;
+    font-family:  sans-serif;
 }
 .container{
     position: relative;
