--- a/user/user_home.css
+++ b/user/user_home.css
@@ -581,7 +581,7 @@ body,
 	padding: 20px 0;
 }
 form label {
-	text-transform: uppercase;
+  font-family: "Lucida Console","Monaco", monospace;
 	font-weight: 500;
 	letter-spacing: 3px;
 }
